--- a/insert_student.html
+++ b/insert_student.html
@@ -75,7 +75,7 @@
 	<title>dashboard</title>
 <body>
 <center><div>
-	<div id="col" style="background-image:url('001-wood-melamine-subttle-pattern-background-pat.jpg')">
+	<div id="col" style="background-image:url('001-wood-melamine-subttle-pattern-background-pat.jpg');border-radius: 35px;">
 	<h3>Insert User</h3>
 		<form action="insert_student.php" method="post" name="registration" enctype="multipart/form-data">
 			<fieldset style="width:330px">
@@ -97,7 +97,7 @@
 					</tr>
 
 					<tr>
-						<td><label>Phone Number*:</label></td><td><input type="text" name="phone" placeholder="enter phone number"/><br></td>
+						<td><label>Phone Number*:+91</label></td><td><input type="text" name="phone" placeholder="enter phone number"/><br></td>
 					</tr>
 
 					<tr>
