--- a/admin.html
+++ b/admin.html
@@ -3,11 +3,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-<<<<<<< HEAD
-		<title>Admin_login
-=======
-		<title>Admin Login
->>>>>>> ce8e3a13d8b847db9ecb2734d578771de1c0b913
+	
+		<title>Admin Login New
+
 		</title>
 		<style>
 			#admin
