--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
 		</style>
 	</head>
 <body >
-	<center><h2 id="cl">Welcome to Admin Pannel Login</h2></center>
+	<center><h2 id="cl">Welcome to Admin Pannel </h2></center>
 	<center>
 	<div id="admin" style="background-image:url('001-wood-melamine-subttle-pattern-background-pat.jpg')">
 	<form action="admin.php" method="post" name="fm">
